--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,7 @@
 
 body{
     font-family: 'Poppins', sans-serif;
+    overflow-y: hidden;
 
 }
 h1,h2,h3,h4,h5,h6{
@@ -14,12 +15,99 @@ h1,h2,h3,h4,h5,h6{
 
 }
 
+
+/* NavBar */
+
+.navbar{
+    transition: 0.6s;
+}
+
+.loading{
+
+    position: fixed;
+    inset: 0;
+    background-color: #333;
+    z-index: 999999;
+    display: none;
+
+}
+.loader {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    border: 3px solid;
+    border-color: #FFF #FFF transparent transparent;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+  }
+  .loader::after,
+  .loader::before {
+    content: '';  
+    box-sizing: border-box;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    border: 3px solid;
+    border-color: transparent transparent #FF3D00 #FF3D00;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    animation: rotationBack 0.5s linear infinite;
+    transform-origin: center center;
+  }
+  .loader::before {
+    width: 32px;
+    height: 32px;
+    border-color: #FFF #FFF transparent transparent;
+    animation: rotation 1.5s linear infinite;
+  }
+      
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
+  @keyframes rotationBack {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(-360deg);
+    }
+  }
+      
+
+.iconnn{
+    transition: 0.6s;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 70px;
+    right: 70px;
+    z-index: 9999;
+    color: black;
+    transition: 0.5s;
+}
 .navbar-brand{
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 1px;
     font-size: 18px;
 }
-/* Navbar */
+
 
 .navbar-nav li a{
     color: white;
@@ -420,6 +508,7 @@ h1,h2,h3,h4,h5,h6{
     letter-spacing: 2px;
     font-size: 12px;
     font-weight: 700;
+    transition: 0.5;
  }
  .works .item-image:hover .item-image-overlay{
     opacity: .9;
